[package]
name = "sleep"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sleep"
path = "src/lib.rs"

[[bin]]
name = "output"
path = "src/bin/output-tests/main.rs"
test = false
doc = false

[dependencies]
